--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "axios": "^1.3.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mysql2": "^3.1.0"
+    "mysql2": "^3.1.0",
+    "type": "module"
+    
   }
 }
